fix: homepage button alignment

--- a/internal/assets/public/css/main.css
+++ b/internal/assets/public/css/main.css
@@ -981,6 +981,11 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
